[project]
name = "bunnyland-postsim"
version = "0.1.0"
description = "Out-of-tree Bunnyland plugin: letters, parcels, mailboxes, and couriers that carry mail across rooms over ticks, with care packages and return-to-sender."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "bunnyland>=1.0.0rc2,<2",
    "pydantic>=2.0",
    "relics-ecs>=0.1.1,<0.2",
]

[project.optional-dependencies]
3d = ["bunnyland-3d>=0.3.0"]

[project.entry-points."bunnyland.plugins"]
"bunnyland.postsim" = "bunnyland_postsim.plugin:bunnyland_plugins"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bunnyland_postsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
